--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,16 @@
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
+#spring:
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
 
 # With authentication
 #spring:
 #  data:
 #    mongodb:
 #      uri: mongodb://john:johnpass@localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
+
+
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost/test
