--- a/mongodb-cluster/config/node2/mongod.config
+++ b/mongodb-cluster/config/node2/mongod.config
@@ -1,8 +1,8 @@
 replication:
   oplogSizeMB: 1024
   replSetName: demo
-net:
-  port: 27018
+#net:
+#  port: 27018
 #security:
 #  authorization: enabled
 #  keyFile: /etc/mongo/mongodb.key
