--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,17 @@
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/test?replicaSet=demo
+
 #spring:
 #  data:
 #    mongodb:
-#      uri: mongodb://localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
+#      uri: mongodb://mongo-node1:27017,mongo-node2:27018,mongo-node3:27019/test?replicaSet=demo
+
+#spring:
+#  data:
+#    mongodb:
+#      uri: mongodb://mongo-node1:27017/test?replicaSet=demo
 
 # With authentication
 #spring:
@@ -10,7 +20,7 @@
 #      uri: mongodb://john:johnpass@localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
 
 
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost/test
+#spring:
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost/test
