--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-spring:
-  data:
-    mongodb:
-      uri: mongodb://localhost:27017/test?replicaSet=demo
+#spring:
+#  data:
+#    mongodb:
+#      uri: mongodb://localhost:27017/test?replicaSet=demo
 
 #spring:
 #  data:
@@ -20,7 +20,12 @@ spring:
 #      uri: mongodb://john:johnpass@localhost:27017,localhost:27018,localhost:27019/test?replicaSet=demo
 
 
-#spring:
-#  data:
-#    mongodb:
-#      uri: mongodb://localhost/test
+# Check quick setup
+
+spring:
+  data:
+    mongodb:
+      host: localhost
+      database: partner-service-db
+      username: user
+      password: Welcome1_
